--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "@angular/platform-browser": "^20.3.3",
     "@angular/platform-browser-dynamic": "^20.3.3",
     "@angular/router": "^20.3.3",
-    "@coreui/angular": "^5.5.17",
+    "@coreui/angular": "~5.5.19",
     "@coreui/angular-chartjs": "~5.5.17",
     "@coreui/chartjs": "~4.1.0",
-    "@coreui/coreui": "~5.4.3",
+    "@coreui/coreui": "^5.4.3",
     "@coreui/icons": "^3.0.1",
-    "@coreui/icons-angular": "~5.5.17",
+    "@coreui/icons-angular": "~5.5.19",
     "@coreui/utils": "^2.0.2",
+    "@popperjs/core": "~2.11.8",
+    "bootstrap": "^5.3.8",
     "chart.js": "^4.5.0",
     "lodash-es": "^4.17.21",
     "ngx-scrollbar": "^13.0.3",
