--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@popperjs/core": "~2.11.8",
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "lodash-es": "^4.17.21",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.2",
