--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/scss/styles.scss"
+              "src/scss/styles.scss",
+               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [],
@@ -138,6 +139,9 @@
     },
     "@schematics/angular:resolver": {
       "typeSeparator": "."
+    },
+    "@angular/material": {
+      "skipInstall": true
     }
   }
 }
