--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.3.3",
-    "@angular/cdk": "^20.2.7",
     "@angular/common": "^20.3.3",
     "@angular/compiler": "^20.3.3",
     "@angular/core": "^20.3.3",
@@ -30,18 +28,21 @@
     "@angular/platform-browser": "^20.3.3",
     "@angular/platform-browser-dynamic": "^20.3.3",
     "@angular/router": "^20.3.3",
-    "@coreui/angular": "~5.5.19",
+    "@coreui/angular": "^5.5.20",
     "@coreui/angular-chartjs": "5.5",
+    "@coreui/angular-pro": "^5.5.20",
     "@coreui/chartjs": "^4.0.0",
     "@coreui/coreui": "^5.4.3",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "~5.5.19",
     "@coreui/utils": "^2.0.2",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@popperjs/core": "~2.11.8",
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "lodash-es": "^4.17.21",
+    "ngx-bootstrap": "^20.0.2",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
