--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ngx-bootstrap": "^20.0.2",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.2",
+    "sweetalert2": "^11.26.3",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.1"
   },
