--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,8 @@
             ],
             "styles": [
               "src/scss/styles.scss",
-               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+               "node_modules/html2pdf.js/dist/html2pdf.bundle.min.js"
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [],
